--- a/specs/reports.yaml
+++ b/specs/reports.yaml
@@ -142,15 +142,16 @@ paths:
                                   type: integer
                                   minimum: 0
                                   maximum: 100
+                                  example: 72
                                 user:
                                   type: object
                                   properties:
-                                    id: {type: integer}
-                                    name: {type: string}
-                                    email: {type: string, format: email}
-                                    phone: {type: string}
-                                    department: {type: string}
-                                    position: {type: string}
+                                    id: {type: integer, example: 215}
+                                    name: {type: string, example: "Георгий"}
+                                    email: {type: string, format: email, example: "user@example.com"}
+                                    phone: {type: string, example: "+79999999952"}
+                                    department: {type: string, example: "Отдел разработки"}
+                                    position: {type: string, example: "Директор по продукту"}
                           pagination:
                             type: object
                             properties:
