fix(openapi): add field descriptions to user create and update forms
- Add descriptions to UserCreateForm fields (username, email, password, role, department, position)
- Add descriptions to UserUpdateForm fields with context for password field
- Rebuild OpenAPI documentation for GitHub Pages deployment

This ensures consistent rendering of create and update user endpoints in Redoc, matching the quality of list endpoints.

--- a/specs/users.yaml
+++ b/specs/users.yaml
@@ -812,43 +812,55 @@ components:
       properties:
         username:
           type: string
+          description: Уникальное имя пользователя
           example: john_doe
         email:
           type: string
           format: email
+          description: Электронная почта (должна быть уникальной)
           example: user@example.com
         password:
           type: string
+          description: Пароль пользователя
           example: example
         role:
           type: string
+          description: Роль пользователя (admin, user и т.д.)
           example: admin
         department:
           type: string
+          description: Отдел или подразделение
           example: Marketing
         position:
           type: string
+          description: Должность пользователя
           example: Manager
     UserUpdateForm:
       type: object
       properties:
         username:
           type: string
+          description: Уникальное имя пользователя
           example: john_doe
         email:
           type: string
+          description: Электронная почта (должна быть уникальной)
           example: user@example.com
         department:
           type: string
+          description: Отдел или подразделение
           example: Marketing
         position:
           type: string
+          description: Должность пользователя
           example: Manager
         password:
           type: string
+          description: Пароль пользователя (оставьте пустым, чтобы не менять)
           example: example
         role:
           type: string
+          description: Роль пользователя (admin, user и т.д.)
           example: admin
     AddCourseForm:
       type: object
