--- a/docs/space-platform-api.yaml
+++ b/docs/space-platform-api.yaml
@@ -182,7 +182,7 @@ paths:
                             items:
                               $ref: '#/components/schemas/UserListItem'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -228,7 +228,7 @@ paths:
                             items:
                               $ref: '#/components/schemas/UserListItem'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -295,7 +295,7 @@ paths:
                             type: integer
                             example: 1
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationFileImportMissing'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -334,7 +334,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationUserUpdate'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -469,7 +469,7 @@ paths:
                           type: boolean
                           example: true
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationIdsArray'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -502,7 +502,7 @@ paths:
                     description: Количество удаленных записей
                     example: 1
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationIdsArray'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -608,7 +608,7 @@ paths:
                             type: string
                             example: example
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
   /user/user/get-import-progress:
@@ -686,7 +686,7 @@ paths:
                             items:
                               $ref: '#/components/schemas/ImportReport'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
   /user/importreport/download:
@@ -817,7 +817,7 @@ paths:
                           created_at: 1692983410
                           updated_at: 1692983410
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -953,7 +953,7 @@ paths:
                     data:
                       group_id: 25
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationGroupParent'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1021,7 +1021,7 @@ paths:
         '404':
           $ref: '#/components/responses/NotFound'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationGroupParent'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1060,7 +1060,7 @@ paths:
                   value:
                     success: true
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationGroupDelete'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1113,7 +1113,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationIdsArray'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1195,7 +1195,7 @@ paths:
         '404':
           $ref: '#/components/responses/NotFound'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationIdsArray'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1225,7 +1225,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationIdsArray'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1360,7 +1360,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationIdsArray'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1429,7 +1429,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1611,7 +1611,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1750,7 +1750,7 @@ paths:
                     success: true
                     message: Certificate created
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationCertificateItem'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1864,7 +1864,7 @@ paths:
                     data:
                       filePath: https://space.example.com/uploads/certificates/zip/certificates-2025-02-11.zip
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -1935,7 +1935,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -2041,7 +2041,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -2173,7 +2173,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -2228,7 +2228,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -2368,7 +2368,7 @@ paths:
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
-          $ref: '#/components/responses/UnprocessableEntity'
+          $ref: '#/components/responses/ValidationPaginationInteger'
         '500':
           $ref: '#/components/responses/InternalError'
       security:
@@ -3894,8 +3894,8 @@ components:
           example:
             success: false
             errors:
-              password:
-                - Password must be at least 6 characters
+              field:
+                - Значение поля некорректно
     UnprocessableEntity:
       description: Ошибка валидации данных (422)
       content:
@@ -3905,8 +3905,111 @@ components:
           example:
             success: false
             errors:
-              password:
-                - Password must be at least 6 characters
+              field:
+                - Значение поля некорректно
+    ValidationPaginationInteger:
+      description: |
+        Ошибка пагинации: номера страниц и лимитов должны быть целыми числами
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+          example:
+            success: false
+            errors:
+              page:
+                - Номер страницы должен быть целым числом
+    ValidationIdsArray:
+      description: |
+        Ошибка списка идентификаторов (массив целых чисел / существование)
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+          example:
+            success: false
+            errors:
+              userIds:
+                - Каждое значение в userIds должно быть целым числом
+              courseIds:
+                - ID курса некорректен
+    ValidationGroupParent:
+      description: |
+        Ошибка структуры групп (родитель невалиден или зациклен)
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+          example:
+            success: false
+            errors:
+              parent_id:
+                - ID родительской группы некорректен
+                - Родительская группа не может быть подгруппой текущей группы
+    ValidationTemplate:
+      description: Ошибка валидации шаблона сертификата
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+          example:
+            success: false
+            errors:
+              name:
+                - Название не может быть пустым
+              file_id:
+                - Необходимо выбрать файл шаблона
+    ValidationCertificateItem:
+      description: |
+        Ошибка выдачи сертификатов по элементам списка
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+          example:
+            success: false
+            errors:
+              items.0.user_id:
+                - Пользователь не найден
+              items.0.course_id:
+                - Курс не найден
+    ValidationUserUpdate:
+      description: Ошибка валидации при обновлении пользователя
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+          example:
+            success: false
+            errors:
+              email:
+                - Email должен быть корректным адресом
+              role:
+                - Указанная роль не существует
+    ValidationFileImportMissing:
+      description: |
+        Ошибка импорта пользователей — файл не загружен
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+          example:
+            success: false
+            errors:
+              fileImport:
+                - Файл не загружен
+    ValidationGroupDelete:
+      description: |
+        Ошибка удаления группы (есть дочерние группы)
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+          example:
+            success: false
+            errors:
+              id:
+                - Невозможно удалить группу, у которой есть дочерние группы
     InternalError:
       description: Внутренняя ошибка сервера
       content:
