--- a/space-platform-api.yaml
+++ b/space-platform-api.yaml
@@ -10,15 +10,13 @@ info:
 
     Здесь собраны схемы аутентификации, бизнес‑блоки пользователей, групп, курсов, сертификатов и отчетов, примеры запросов и схемы ответов. Документация рассказывает, как синхронизировать пользователей, подтянуть группы и права из вашей CRM, создавать курсы и выгружать отчеты — все через безопасный `X-API-Key` и понятные бизнес-сущности.
 
-    ## Обзор платформы
+    ## Что можно делать через API
 
-    - **Управление пользователями** — группы с вложенностью, сегментация, импорт, лимиты
-    - **CMS** — конструктор лендингов, страниц, меню, SEO
-    - **Платёжный шлюз** — приём платежей (ЮMoney, Robokassa)
-    - **Маркетинг** — email-рассылки (13 системных событий), формы, wait-list
-    - **Сертификаты** — генерация PDF-документов
-    - **Каталог курсов** — витрина (контент курсов в LMS)
-    - **Интеграция с LMS** — iframe, webhook, API для курсов
+    - Добавлять, изменять и удалять пользователей.
+    - Назначать пользователям обучение.
+    - Создавать группы, редактировать их и назначать им обучение.
+    - Изменять пользовательские поля.
+    - Выдавать сертификаты после завершения обучения.
 
     ## Аутентификация
 
